# LFTCM2024_Rocq

./: .gitignore  README.md  _CoqProject  demo.v  exercises.v  exercises_correction.v  lftcm2024.opam  practice.v  solutions.v  tutorial.v
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: nix-action-default.yml
.nix/: config.nix  coq-nix-toolbox.nix
.nix/coq-overlays/LFCM2024/: default.nix
