opam-version: "2.0"
maintainer: "Cyril Cohen <cyril.cohen@inria.fr>"
version: "dev"

homepage: "https://github.com/CohenCyril/LFTCM2024_Rocq"
dev-repo: "git+https://github.com/CohenCyril/LFTCM2024_Rocq.git"
bug-reports: "https://github.com/CohenCyril/LFTCM2024_Rocq/issues"

synopsis: "A Coq/Rocq mathcomp practice and tutorial"

build: [make "-j%{jobs}%"]
install: [make "install"]
depends: [
  "coq" {>= "8.19.1" & < "8.20"}
  "coq-mathcomp-field" {>= "2.2.0" & < "2.3"}
  "coq-mathcomp-algebra-tactics" {>= "1.2.3" & < "1.3"}
  "coq-mathcomp-analysis" {>= "1.0.0" & < "1.1"}
  "coq-lsp"
]

authors: [
  "Cyril Cohen"
  "Marie Kerjean"
]

